Migrate from easyrtc to simple-peer and simple-signal. Implement React-based counter

--- a/static/index.html
+++ b/static/index.html
@@ -2,18 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>EasyRTC - Server Root</title>
-
-    <script type="text/javascript" src="/js/client.js"></script>
   </head>
-  <body onload="Client.connect();">
-    <h1>Hello EasyRTC</h1>
+  <body>
+    <h1>Hello WebRTC</h1>
 
-    <p>
-      This is the easiest location to put your own static html files for developing WebRTC
-      applications.
-    </p>
-
-    <button type="button" onclick="Client.broadcastToConnectedPeers();">Broadcast</button>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/js/App.js"></script>
   </body>
 </html>
