--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style type="text/css">
+      .canvas-container {
+        border: 1px solid #000000;
+      }
+    </style>
   </head>
   <body>
     <!-- Load React. -->
