Add serialization through Cap'n Proto. Add syncing of full history to newly connected peer. Implement vector clock. Rename Combobulator->Diff Increase font size in text-area.

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,9 @@
       .canvas-container {
         border: 1px solid #000000;
       }
+      textarea {
+        font-size: 18px;
+      }
     </style>
   </head>
   <body>
